tests/error/type_match/base_case_reference_const_propagation.bz
function test()
{
	let i = 0;
	let pi: *int32 = &i;
	let _: &*const int32 = pi;
}
